<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.task_6.MainActivity"
    android:layout_weight="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_small_element"
            android:text="@string/title"
            android:textSize="@dimen/text_size"
            />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_big_element"
            android:hint="@string/hint_title"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="@integer/layout_weight_small_element"
            android:textSize="@dimen/text_size"
            />


        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:layout_weight="@integer/layout_weight_big_element"
            android:onClick="showDatePicker"
            />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_weight="@integer/layout_weight_small_element"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:id="@+id/text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_big_element"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:onClick="showTimePicker"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/text_size"
        android:paddingTop="@dimen/activity_vertical_margin"/>
    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/description_height"
        android:hint="@string/hint_description"
        />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_save"
        android:layout_gravity="bottom" />
</LinearLayout>
